// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Private - Common - ComTitle =>  Snapshot con classCondition y size  1`] = `
<h2
  class="com-title --s --modificador"
>
  Título de impacto H2
</h2>
`;

exports[`Private - Common - ComTitle =>  Snapshot h2 con content tags  y link 1`] = `
<h2
  class="com-title"
>
  <a
    class="com-link"
    href="/ultimas-noticias"
    target=""
    title=""
  >
    Soy un &lt;em&gt;Título&lt;/em&gt; de impacto H2 con ComLink
  </a>
</h2>
`;

exports[`Private - Common - ComTitle =>  Snapshot h2 con link 1`] = `
<h2
  class="com-title"
>
  <a
    class="com-link"
    href="/ultimas-noticias"
    target=""
    title=""
  >
    Título de impacto H2 con ComLink
  </a>
</h2>
`;

exports[`Private - Common - ComTitle =>  Snapshots con tags h1, h2, h3, h4 1`] = `
Array [
  <h1
    class="com-title"
  >
    Título de impacto H1
  </h1>,
  <h2
    class="com-title"
  >
    Título de impacto H2
  </h2>,
  <h3
    class="com-title"
  >
    Título de impacto H3
  </h3>,
  <h4
    class="com-title"
  >
    Título de impacto H4
  </h4>,
]
`;

exports[`Private - Common - ComTitle =>  Snapshots tags no permitidos 1`] = `
Array [
  <h4
    class="com-title"
  >
    Título de impacto H5
  </h4>,
  <h4
    class="com-title"
  >
    Título de impacto SPAN
  </h4>,
]
`;
